--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ip-nat-part1.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ip-nat-part1.j2
@@ -27,7 +27,7 @@ ip nat translation max-entries {{ ip_nat.translation.max_entries.host_limit }} h
 {%     if ip_nat.translation.low_mark.host_percentage is arista.avd.defined %}
 ip nat translation low-mark {{ ip_nat.translation.low_mark.host_percentage }} host
 {%     endif %}
-{%     for ip_limit in ip_nat.translation.max_entries.ip_limits | arista.avd.default([]) %}
+{%     for ip_limit in ip_nat.translation.max_entries.ip_limits | arista.avd.default([]) | arista.avd.natural_sort("ip") %}
 ip nat translation max-entries {{ ip_limit.limit }} {{ ip_limit.ip }}
 {%     endfor %}
 {%     if ip_nat.kernel_buffer_size is arista.avd.defined %}
