Refactored the template for inner protocol

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -176,7 +176,7 @@ interface {{ ethernet_interface.name }}
 {%             if ethernet_interface.encapsulation_vlan.client.vlan is arista.avd.defined %}
 {%                 set encapsulation_cli = 'client ' ~ client_protocol ~ ' ' ~ ethernet_interface.encapsulation_vlan.client.vlan %}
 {%             elif ethernet_interface.encapsulation_vlan.client.outer is arista.avd.defined and ethernet_interface.encapsulation_vlan.client.inner is arista.avd.defined %}
-{%                 if ethernet_interface.encapsulation_vlan.client.inner_protocol is arista.avd.defined and ethernet_interface.encapsulation_vlan.client.inner_protocol != client_protocol %}
+{%                 if ethernet_interface.encapsulation_vlan.client.inner_protocol is arista.avd.defined %}
 {%                     set encapsulation_cli = 'client ' ~ client_protocol ~ ' outer ' ~ ethernet_interface.encapsulation_vlan.client.outer ~ ' inner ' ~ ethernet_interface.encapsulation_vlan.client.inner_protocol ~ ' ' ~ ethernet_interface.encapsulation_vlan.client.inner %}
 {%                 else %}
 {%                     set encapsulation_cli = 'client ' ~ client_protocol ~ ' outer ' ~ ethernet_interface.encapsulation_vlan.client.outer ~ ' inner ' ~ ethernet_interface.encapsulation_vlan.client.inner %}
@@ -195,7 +195,7 @@ interface {{ ethernet_interface.name }}
 {%                 if ethernet_interface.encapsulation_vlan.network.vlan is arista.avd.defined %}
 {%                     set encapsulation_cli = encapsulation_cli ~ ' network ' ~ network_protocol ~ ' ' ~ ethernet_interface.encapsulation_vlan.network.vlan %}
 {%                 elif ethernet_interface.encapsulation_vlan.network.inner is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.outer is arista.avd.defined %}
-{%                     if ethernet_interface.encapsulation_vlan.network.inner_protocol is arista.avd.defined and ethernet_interface.encapsulation_vlan.network.inner_protocol != network_protocol %}
+{%                     if ethernet_interface.encapsulation_vlan.network.inner_protocol is arista.avd.defined %}
 {%                         set encapsulation_cli = encapsulation_cli ~ ' network ' ~ network_protocol ~ ' outer ' ~ ethernet_interface.encapsulation_vlan.network.outer ~ ' inner ' ~ ethernet_interface.encapsulation_vlan.network.inner_protocol ~ ' ' ~ ethernet_interface.encapsulation_vlan.network.inner %}
 {%                     else %}
 {%                         set encapsulation_cli = encapsulation_cli ~ ' network ' ~ network_protocol ~ ' outer ' ~ ethernet_interface.encapsulation_vlan.network.outer ~ ' inner ' ~ ethernet_interface.encapsulation_vlan.network.inner %}
